2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* cpu_asm.c: Rework logic that decides when to call
	_Thread_Dispatch.  Analysis by Sergei Organov <osv@javad.ru>
	determined that _ISR_Signals_to_thread_executing was not being
	honored and/or cleared properly.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf-2.57 + automake-1.7.2.
	* Makefile.am: Eliminate C_O_FILES, S_O_FILES, libscorecpu_a_OBJECTS.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-07-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build libscorecpu.a instead of rtems-cpu.rel.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_TOP(../../../..).

2002-07-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems.c: Remove.
	* Makefile.am: Reflect changes above.

2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_PROJECT_ROOT.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use AC_CONFIG_AUX_DIR(../../../..).
	Add AC_PROG_RANLIB.

2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Include $(top_srcdir)/../../../automake/*.am.
	Use ../../../aclocal.

2001-04-03	Joel Sherrill <joel@OARcorp.com>

	* Per PR94, all rtems/score/CPUtypes.h are named rtems/score/types.h.